syntax = "proto3";

package Saga;

enum ProviderTransport {
  TRANSPORT_LOCAL = 0;
  TRANSPORT_GOOGLE = 1;
  TRANSPORT_GITHUB = 2;
  TRANSPORT_MICROSOFT = 3;
  TRANSPORT_APPLE = 4;
}

message SagaSignupDto {
  ProviderTransport provider = 1;
  string providerId = 2;
  string userName = 3;
  string email = 4;
  string fullName = 6;
  optional string password = 7;
  string dob = 8;
  string avatar = 9;
  optional string accessToken = 10;
  optional string refreshToken = 11;
  optional int64 iat = 12;
  optional int64 exp = 13;
  optional string coverImage = 14;
}

message SagaSignupResponse {
  string response = 1;
  string userId = 2;
}

message SagaHealthCheckRequest {
  string service = 1;
}

message SagaHealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service SagaService {
  rpc userSignupFlow(SagaSignupDto) returns (SagaSignupResponse) {}
}